crates/adamas-cli/tests/snapshots/golden__errors-literal-fraction-in-an-integer.snap
---
source: crates/adamas-cli/tests/golden.rs
expression: text
---
Ошибка: literal-fraction-in-an-integer.adamas:11:13: литерал не подходит типу `Int64`: тип целый, а литерал дробный
  truncated = 1.5
              ^^^
