crates/adamas-cli/tests/snapshots/golden__errors-literal-negative-unsigned.snap
---
source: crates/adamas-cli/tests/golden.rs
expression: text
---
Ошибка: literal-negative-unsigned.adamas:8:7: литерал не подходит типу `UInt8`: тип беззнаковый, а литерал отрицательный
  low = -1
        ^^
