crates/adamas-cli/tests/snapshots/golden__errors-literal-out-of-range.snap
---
source: crates/adamas-cli/tests/golden.rs
expression: text
---
Ошибка: literal-out-of-range.adamas:11:8: литерал не помещается в `Int8`
  over = 128
         ^^^
