crates/adamas-cli/tests/snapshots/golden__errors-literal-pattern-mixed-with-a-constructor.snap
---
source: crates/adamas-cli/tests/golden.rs
expression: text
---
Ошибка: literal-pattern-mixed-with-a-constructor.adamas:16:1: разбирать нечего: значение имеет тип `Int64`
  confused 0 = 0
  ^^^^^^^^^^^^^^
