crates/adamas-cli/tests/snapshots/golden__errors-literal-pattern-needs-bool.snap
---
source: crates/adamas-cli/tests/golden.rs
expression: text
---
Ошибка: literal-pattern-needs-bool.adamas:16:1: литеральный паттерн отвечает `Bool`, а конструкторов у него обязано быть ровно два - `True` и `False`
  parity 0 = 0
  ^^^^^^^^^^^^
