crates/adamas-cli/tests/snapshots/golden__errors-literal-pattern-not-covered.snap
---
source: crates/adamas-cli/tests/golden.rs
expression: text
---
Ошибка: literal-pattern-not-covered.adamas:16:1: не покрыто: `2`
  parity 0 = 0
  ^^^^^^^^^^^^
