crates/adamas-cli/tests/snapshots/golden__errors-literal-pattern-out-of-range.snap
---
source: crates/adamas-cli/tests/golden.rs
expression: text
---
Ошибка: literal-pattern-out-of-range.adamas:19:1: литерал `200` не разбирает значение типа `Int8`: литерал не укладывается в этот тип
  narrow 0 = 0
  ^^^^^^^^^^^^
