crates/adamas-cli/tests/snapshots/golden__errors-literal-pattern-over-a-family.snap
---
source: crates/adamas-cli/tests/golden.rs
expression: text
---
Error: literal-pattern-over-a-family.adamas:11:1: литерал `0` не разбирает значение типа `Nat`: литералом разбирается только примитив (§4.11)
  shrink 0 = Zero
  ^^^^^^^^^^^^^^^
