crates/adamas-cli/tests/snapshots/golden__errors-literal-without-a-primitive.snap
---
source: crates/adamas-cli/tests/golden.rs
expression: text
---
Error: literal-without-a-primitive.adamas:11:11: отрицательный, дробный или строковый литерал пока не элаборируется: первые два пишутся там, где ожидается примитив: `Int8`…`Int64`, `UInt8`…`UInt64`, `Float32`, `Float64`, - а здесь написанный тип их не принимает; строка пишется там, где ждут `String`, либо там, где написан `Array n UInt8` - тогда байтами UTF-8 с завершающим нулём
  negated = -3
            ^^
